fix: fix iOS8 bugs - blocks overlapping text on header - ToC not displaying correctly - Footer not displaying properly - Stacked bar charts not displaying properly

--- a/src/scss/_components.chart.bar.scss
+++ b/src/scss/_components.chart.bar.scss
@@ -38,6 +38,7 @@
     bottom: 1.5rem;
     font-weight: bold;
     pointer-events: none;
+    height: 100%;
   }
 
   &__low,
@@ -48,6 +49,11 @@
     display: flex;
     align-items: flex-end;
     padding: 0 0.25rem;
+  }
+
+  &__range-value {
+    position: absolute;
+    bottom: 0;
   }
 
   &__low {
